fixed the z-index of the editor

--- a/js/alpinejs-page-editor.css
+++ b/js/alpinejs-page-editor.css
@@ -58,8 +58,8 @@
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
-    /* Subtle shadow on the left */
     overflow-y: auto;
+    z-index: 99999999;
 }
 
 .editor.open {
